--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -70,4 +70,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Run tests
-        run: make test
+        run: go test -v ./...
