--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,7 +40,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        go-version: [1.19.x, 1.20.x, 1.21.x ]
+        go-version: [ 1.21.x ]
         platform: [ ubuntu-latest, macos-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -59,7 +59,7 @@ jobs:
     name: TestOnWindows
     strategy:
       matrix:
-        go-version: [ 1.19.x, 1.20.x, 1.21.x ]
+        go-version: [ 1.21.x ]
         platform: [ windows-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
