--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,7 +40,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        go-version: [ 1.22.x, 1.23.x, 1.24.x ]
+        go-version: [ 1.23.x, 1.24.x ]
         platform: [ ubuntu-latest, macos-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
